Fix CSS alignment and update logo image size

--- a/new project/css/style.css
+++ b/new project/css/style.css
@@ -16,11 +16,11 @@
 .logo a{
   width:100%;
   height:100%;
-  align-item: center;
+  align-items: center;
 }
 .logo a img{
-   width: auto;
-  height:auto;
+   width: 5%;
+  height: 5%;
 }
 .menu{
   width:75%;
